--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .App{
+ 
+  width: 100%;
+  height: 100%;
+  
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+  
+  
+
+.contenedor-principal{
+  min-height: 100%;
+  min-width: 100%;
+  margin-top: 30px;
+  display:flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  
+  
+}
+
+.titulo{
   color: white;
+  background: transparent;
+  font-family: 'Times New Roman', Times, serif;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.contenedor-resultados{
+  background: transparent;
+  min-width: 900px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+  
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Formulario{
+  margin-top: 0;
+  
+}
+
+.Formulario-Abc{
+    margin-bottom: 50px;
 }
